assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');


h1, h2, h3, h4 {
    font-family: 'Merriweather', serif;
}

p {
    font-family: 'Open Sans', sans-serif;
}

/*------------------ Navbar ------------------*/
.navbarCustom{
    padding: 10px 90px;
    background-color: #231f20 !important;
}

.nav-link {
    color: white !important;
}

.nav-link:hover {
    color: #e09900 !important;
}

/*------------------ Header ------------------*/
.hero-image {
    /*-- Resource: Photo by Adam Jaime on Unsplash https://unsplash.com/photos/dmkmrNptMpw */
    background: url("../img/hero-image.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 600px;
    min-width: 100%;
    position: relative;
    left: 0;
    right: 0;
}

.hero-text {
    position: absolute;
    color: #fafafa;
    top: 200px;
    bottom: 165px;
    left: 80px;
    right: 0px;
}

.hero-text h1 {
    font-weight: 700;
    letter-spacing: 2px;
}

.hero-text h2 {
    position: absolute;
    line-height: 50px;
    font-family: 'Open Sans', sans-serif;
    font-size: 30px;
}

.hero-button {
    font-family: 'Merriweather', serif;
    position: relative;
    background-color: #231f20;
    color: white;
    min-height: 50px;
    font-size: 20px;
    font-weight: 700;
    margin: 90px 0;
    padding: 10px 15px;
}

.hero-button:hover {
    color: #e09900;
}

/*------------------ Search Distilleries Section ------------------*/

.searchDistilleries {
    padding-top: 50px;
    padding-bottom: 120px;
}

/* Resource: Code sourced from https://www.w3schools.com/howto/howto_js_tabs.asp */
/* Tab buttons */

.tab button {
    /*background-color: light grey;*/
    background-color: #eceaea;
    border: none;
    padding: 10px 20px;
    border-radius: 4px;
    font-weight: 400;
    float: right;
    margin-left: 10px;
    font-family: 'Open Sans', sans-serif;
}

.tab button:hover {
  background-color: #231f20;
  color: #fafafa;
}

.tab button.active {
  background-color: #e09900;
}

.fa-map-marker, .fa-map {
    padding-right: 10px;
}

/* H2 heading */
.searchDistilleries h2 {
    color: #231f20;
    padding-bottom: 10px;
    position: relative;
}

.searchDistilleries h2::after {
    content:'';
    height: 3px;
    width: 100px;
    background: #231f20;
    position: absolute;
    left: 0;
    bottom: 0;
}


.tabcontent h3{
    color: #e09900;
    margin-top: 50px;
}

/*------------------ History Section ------------------*/
.history-section {
    background-color: #231f20;
    padding: 120px 0;
    color: #fafafa;
}

.history-section h2 {
    color: #e09900;
    padding-bottom: 10px;
}


/*------------------ Image Section ------------------*/

.imageSection {
    background-color: #fafafa;
    padding: 120px 0px;
}

/*------------------ Footer ------------------*/
.footer {
    background-color: #231f20;
    min-height: 300px;
    padding: 70px 0px;
}

/* Resource: https://www.w3schools.com/html/tryit.asp?filename=tryhtml_lists_menu */
ul {
  list-style-type: none;
  overflow: hidden;
  padding-inline-start: 0px;
}

li {
  float: left;
  padding-right: 12px;
  font-family: 'Open Sans', sans-serif;
}

li a {
    color: white;
}

.footer li a:hover {
    color: #e09900;
    text-decoration: none;
}

.footer img {
    height: 120px;
    padding-top: 40px;
}

.contact a {
    color: white;
}

footer p {
    color: white;
}

footer .fa-phone-square {
    font-size: 20px;
}

footer .fa {
    padding-right: 5px;
    color: #e09900;
}

/*------------------ Leaflet.js Map ------------------*/
#map {
    min-height: 600px;
    width: 100%;
}

.mapImage {
    max-height: 150px;
}

.mapTitle {
    font-size: 20px;
    font-weight: 300;
    margin-bottom: 0px;
}

/*------------------ Grid Section ------------------*/

.gridDiv {
    padding: 30px;
    background-color: #eceaea;
    border-radius: 5px;
    height: 750px;
    margin: 60px 30px 0px 30px;
    float: left;
    /* Resource: https://www.w3schools.com/css/css3_shadows_box.asp */
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.15), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
    transition: transform .2s; 
}

.county {
    background-color: rgba(169, 169, 169, 0.35);
    width: 40%;
    padding: 5px;
    border-radius: 3px;
} 

.gridImage {
    width: 100%; 
    /*height: auto;*/
    /*display: block;*/
    /*object-fit: contain;*/
}

.website-btn {
    background-color: #231f20;
    color: white;
    padding: 10px;
}

.website-btn:hover {
    background-color: #e09900;
}

.fa-home, .fa-times-circle, .fa-info-circle {
    font-size: 20px;
}

.fa-times-circle {
    color: #ee2a2a;
}

/* Resource: https://www.w3schools.com/howto/howto_css_zoom_hover.asp */
.gridDiv:hover {
    transform: scale(1.02); 
}

/*------------------ Grid Hover Button ------------------*/
    
/* Hover button styling */
.hoverButton {
    /*background-color: #0b025a;*/
    background-color: #231f20;
    color: white;
    font-size: 17px;
    font-family: 'Open Sans', sans-serif;
    border-radius: 5px;
    padding: 10px;
    border: none;
};

/* Position dropdown content */
.dropdown {
    position: relative;
    display: inline-block;
    margin-bottom: 50px;
} 

.fa-sort-desc {
    padding-left: 7px;
}
 
/* Change button colour on hover 
.hoverButton:hover {
    background-color: #eceaea;
    color: #231f20;
} */

/* Hide dropdown content by default */
.dropdownContent {
    display: none;
    position: absolute;
    background-color: #f1f1f1;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px #00000033;
    z-index: 1;
}

/* Style dropdown links */
.dropdownContent a {
    color: #231f20;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

/* Change colour of dropdown link on hover */
.dropdownContent a:hover {
    background-color: #dddddd;
}

.dropdown:hover .dropdownContent {
    display: block;
}



/*------------------ Media Queries ------------------*/

/* Navbar */
@media only screen and (max-width: 600px){
    .navbarCustom {
        padding: 15px 15px;
    }
}

/* Hero image section  */
@media only screen and (max-width: 600px){
    .hero-text {
        left: 10px;
        top: 400px;
    }
}

@media only screen and (max-width: 600px){
    .hero-text  h1{
        display: none;
    }
}

@media only screen and (max-width: 600px){
    .hero-text  h2{
        font-size: 170%;
        font-weight: bold;
        margin-top: 70px;
    }
}

@media only screen and (max-width: 600px){
    .hero-button {
        display: none;
    }
}

/* Tab section */
@media only screen and (max-width: 600px){
    .tab {
        padding-top: 30px;
    }
}

@media only screen and (max-width: 600px){
    .tab button {
        float: left;
    }
}

@media only screen and (max-width: 600px){
.tabcontent h3 {
    margin-top: 100px;
    }
}

/* Grid view section */
@media only screen and (max-width: 600px){
    .gridDiv {
        margin: 50px 0 0 0;
    }
}

/* Image section */
@media only screen and (max-width: 600px){
    .imageOne .img-fluid {
        padding-bottom: 60px;
    }
}

